Fixed the styles to be more responsive on smaller screens

--- a/public/style.css
+++ b/public/style.css
@@ -100,7 +100,7 @@ body {
   margin-bottom: 5em;
 }
 #forms Button {
-  margin-right: 0.75em;
+  margin-right: 0.5em;
 }
 #referral-button {
   color: #fff;
